--- a/index.html
+++ b/index.html
@@ -123,13 +123,11 @@
                         <span class="big-circle"><i class="fa-solid fa-sharp fa-tablet"></i></span>
                         <h2 class="capital">Responsive Design</h2>
                         <p>Responsive web design (RWD) is a web design approach to make web pages that render well on all screen sizes and resolutions while ensuring good usability. .</p>
-                    </div>
-                    
-                    <!-- <div class="srvice">
-                        <span class="big-circle"><i class="fa-solid fa-sharp fa-calendar-days"></i></span>
-                        <h2 class="capital">marketing services</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia, provident vitae! Magni tempora perferendis eum non provident.</p>
-                    </div> -->
+                    </div> 
+                    <div class="srvice">
+                        <span class="big-circle"><i class="fa-solid fa-sharp fa-paint-brush"></i></span>
+                        <h2 class="capital">Painting</h2>
+                        <p>Paintings are a form of visual art that captures the expression of ideas and emotions on a two-dimensional               surface.Artists use the elements of colors, tones, and textures in unique ways to produce paintings that convey sensations of space,light – traditionally on a flat surface.</div>
                 </div>
             </section>
             <section id="portfolio">
@@ -157,6 +155,7 @@
                     <h3 class="num">1</h3>
                     <span class="capital">award won</span>
                 </div>
+                
             </section>
             <section id="portfolio">
                 <div id="portfolio-wrapper">
