--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body>
         <nav id="sticky-top-part">
             <div id="container" style="display: flex; align-items: center; min-width: 230px; justify-content: space-between;">
-                <img src="IMG/Name Logo-01.png" alt="logo" style="width: 50px; height: 50px;">
+                <img src="IMG/animated logo.gif" alt="logo" style="width: 50px; height: 50px;">
                 <h1>Abishek Thapa
                 </h1>
             </div>
