--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <section id="intro-details">
                 <div id="name-skills" class="left-column">
                     <div id="pic-names">
-                        <img src="IMG/AT.jpg"width="150px" height="150px" alt="Profile Picture" />
+                        <img src="IMG/Animated logo.gif"width="150px" height="150px" alt="Profile Picture" />
                         <div id="name-and-more">
                             <p><b>Name: </b>Abishek Thapa</p>
                             <p><b>Profile: </b>Web Developer and Designer</p>
