--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                     <li class="capital"><a href="#services">Services</a></li>
                     <li class="capital"><a href="#portfolio">Works</a></li>
                     <!-- <li class="capital"><a href="#blog-section">Blog</a></li> -->
-                   <!-- <div id="dropdown-container1">
-                        <li class="capital" id="first-drpdwn"><span>drop down</span><i class="fa-sharp fa-solid fa-angle-down"></i></li>
+                    <div id="dropdown-container1">
+                        <!--<li class="capital" id="first-drpdwn"><span>drop down</span><i class="fa-sharp fa-solid fa-angle-down"></i></li>-->
                         <ul id="first-drpdwn-list" class="hide">
                             <li class="capitalize">drop down 1</li>
                             <div id="dropdown-container2">
@@ -40,7 +40,7 @@
                             </div>
                             <li class="capitalize">drop down 2</li>
                         </ul>
-                    </div>-->
+                    </div>
                     <li class="capital"><a href="#blog-section">Contact</a></li>
                 </ul>
             </nav>
